bk_ida/gccida/g0/doing_eh
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doing_eh/src/except.c:840:7: error: use of undeclared identifier 'warned_11'
if ( !warned_11 ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doing_eh/src/except.c:845:1: error: use of undeclared identifier 'warned_11'
warned_11 = 1; 
^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/doing_eh/src/obj/except.o] Error 1
